sites/navy/clusters/dal-navy-core-1/wave-9/overlays/whoami/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: whoami
    app.kubernetes.io/name: whoami
  name: whoami
  annotations:
    cert-manager.io/cluster-issuer: dalmura-letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: whoami.navy.dalmura.cloud
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: true
    traefik.ingress.kubernetes.io/router.middlewares: authentik-authentik@kubernetescrd
spec:
  ingressClassName: ingress-private
  tls:
    - hosts:
      - whoami.navy.dalmura.cloud
      secretName: whoami-cert
  rules:
  - host: whoami.navy.dalmura.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whoami
            port:
              number: 8080
